<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent" android:layout_height="match_parent"
	android:background="@color/white_mask">
	
	<LinearLayout android:layout_width="match_parent"
		android:layout_height="match_parent" android:orientation="vertical">
		
		<TextView android:id="@+id/descriptionText"
			android:layout_width="match_parent" android:layout_height="wrap_content"
			android:text="@string/about_help" style="@style/HelpText"/>
			
		<TextView android:id="@+id/termsOfServiceText"
			android:layout_width="match_parent" android:layout_height="wrap_content"
			android:text="@string/about_terms_of_service" style="@style/HelpText" />

		<TextView android:id="@+id/attributionText"
			android:layout_width="match_parent" android:layout_height="wrap_content"
			android:text="@string/about_attributions" style="@style/HelpText"/>
	</LinearLayout>
</ScrollView>